@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-15T16:07:14Z",
-  "count_outdated" : 2301,
-  "uniques_outdated" : 731,
+  "timestamp" : "2024-02-16T00:28:44Z",
+  "count_outdated" : 2302,
+  "uniques_outdated" : 732,
   "count" : 2336,
   "uniques" : 742,
   "views" : [
-    {
-      "timestamp": "2024-02-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 1,
